--- a/code_review_agent/.env
+++ b/code_review_agent/.env
@@ -1,5 +1,5 @@
 # Environment configuration for Code Review Agent
 GOOGLE_GENAI_USE_VERTEXAI=TRUE
-GOOGLE_API_KEY=AIzaSyBZFhFeHhVXHYdx6W0rfewidVGdU1XnFjQ
-GOOGLE_CLOUD_PROJECT=cna-131041
+GOOGLE_API_KEY=
+GOOGLE_CLOUD_PROJECT=
 GOOGLE_CLOUD_LOCATION=global
